# wombug

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/include/: common.h  debug.h  file.h  help.h  info.h
src/shared/: common.c  debug.c  file.c  help.c  info.c
src/unix/: file.c
src/win32/: file.c
